src/objects/NOFA__c.object
<CustomObject>
    <fields>
        <fullName>Infrastructure_Improvement_App__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Infrastructure Improvement Added to Application Setup Section</description>
        <label>Infrastructure Improvement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Infrastructure_Improvement_NOFO_Concept__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Infrastructure Improvement Added to NOFO Concept Section</description>
        <label>Infrastructure Improvements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intent_to_Apply_Due_Date__c</fullName>
        <label>Intent to Apply Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intent_to_Apply_Required__c</fullName>
        <label>Intent to Apply Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Optional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Intent_to_Apply_Submission_Instructions__c</fullName>
        <label>Intent to Apply Submission Instructions</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Intermediary_Justification_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Intermediary Justification </label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intermediary_Justification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intermediary Justification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issuing_Officer__c</fullName>
        <label>Issuing Office</label>
        <picklist>
            <picklistValues>
                <fullName>HQ(Office of Grants Management)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FFMC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Leadership_and_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leadership and Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_NOFA_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy NOFO ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>HYPERLINK(&quot;apex/projectlook?id=&quot; &amp; Id &amp; &quot;&amp;parentNofa=&quot; &amp; Parent_NOFA__r.Id , IMAGE( &quot;https://cns--devsb12--c.cs32.content.force.com/servlet/servlet.ImageServer?id=015r00000008unk&amp;oid=00Dr00000000Rxt&quot;, &quot;Submit Application&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lodging_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box on NOFA for Location Information section on NOFA &amp; Application. KY</description>
        <label>Lodging Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lower_Threshold__c</fullName>
        <label>Lower Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mailing_City1__c</fullName>
        <formula>Point_of_contact__r.City</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City2__c</fullName>
        <formula>Point_of_contact1__r.City</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State1__c</fullName>
        <formula>Point_of_contact__r.State</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State2__c</fullName>
        <formula>Point_of_contact1__r.State</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street_Address_11__c</fullName>
        <formula>Point_of_contact__r.Street</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Street Address  1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street_Address_12__c</fullName>
        <formula>Point_of_contact1__r.Street</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Street Address  1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street_Address_222__c</fullName>
        <formula>Point_of_contact1__r.Street</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Street Address  2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip1__c</fullName>
        <formula>Point_of_contact__r.PostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip2__c</fullName>
        <formula>Point_of_contact1__r.PostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_of_Award_Years__c</fullName>
        <label>Max # of Award Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_of_Sub_Budgets__c</fullName>
        <label>Max # of Sub-Budgets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NCCC_All_Concept_Paper__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NCCC (All) Added to Concept Paper Setup – Other section</description>
        <label>NCCC (All)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCCC_All__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCCC (All)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCCC_Dates_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field shows up on the Concept Paper.</description>
        <label>NCCC Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCCC_Dates_and_Questions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCCC Dates and Questions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCCC_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NCCC checkbox in Other section.</description>
        <label>NCCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCCC_Partner_Concept_paper__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NCCC (Partner) Added to Concept Paper Section</description>
        <label>NCCC (Partner)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCCC_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCCC (Partner)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCCC_Program_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NCCC Program Name</label>
        <referenceTo>Program_Name__c</referenceTo>
        <relationshipName>NOFAs_RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NCCC_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NCCC Program Name</label>
        <referenceTo>Program_Name__c</referenceTo>
        <relationshipName>NOFAs_RFPs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NCCC_Traditional_Concept_paper__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NCCC (Traditional) Added to Concept_paper Section</description>
        <label>NCCC (Traditional)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCCC_Traditional_Disaster_Response_Con__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NCCC (Traditional Disaster Response) Added to Concept paper Section</description>
        <label>NCCC (Traditional Disaster Response)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCCC_Traditional_Disaster_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCCC (Traditional Disaster Response)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCCC_Traditional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCCC (Traditional)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCC_for_Focus_Areas_and_Objectives__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NOFA_Active_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open to Applications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NOFA_RFP_Summary__c</fullName>
        <label>NOFO/RFP Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NOFA_Sequence__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>NOFO Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>NOFA_Type__c</fullName>
        <label>NOFO Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PNS Amendments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New &amp; Continuation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NOFA_name__c</fullName>
        <label>NOFO Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Name1__c</fullName>
        <formula>Point_of_contact__r.LastName &amp;&quot;,&quot;&amp; Point_of_contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name2__c</fullName>
        <formula>Point_of_contact1__r.LastName &amp;&quot;,&quot;&amp; Point_of_contact1__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Narratives__c</fullName>
        <label>Narratives</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Natural_and_Other_Disasters_App__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Natural and Other Disasters Added to Application Setup Section</description>
        <label>Natural and Other Disasters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Natural_and_Other_Disasters_NOFO_Concept__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Natural and Other Disasters Added to NOFO Concept Paper Section</description>
        <label>Natural and Other Disasters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Need </label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_documents__c</fullName>
        <label>Number of Documents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notice_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notice ID</label>
        <referenceTo>Notice__c</referenceTo>
        <relationshipName>NOFAs_RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notice_of_Intent_to_Apply_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notification of Intent to Apply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_of_Intent_to_Apply_Required__c</fullName>
        <description>When the Notification of Intent to Apply field is checked the Notification of Intent to Apply button should display.</description>
        <label>Allow Notification of Intent to Apply</label>
        <picklist>
            <picklistValues>
                <fullName>Optional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Master_Awards__c</fullName>
        <description>Field used for new FAIN requirements. 
Need not be shown on Layout. (KY)</description>
        <label>Number of Master Awards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Optional__c</fullName>
        <label>Other Required or Optional Documents</label>
        <picklist>
            <picklistValues>
                <fullName>Evaluation Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letters of Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evidence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Organization_Characteristics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Organization Characteristics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization_Docs__c</fullName>
        <label>Organization Docs</label>
        <picklist>
            <picklistValues>
                <fullName>1199 Direct Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Articles of Incorporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auditor’s Statement Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board of Directors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Advisory Group Names &amp; Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Financial Report User Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Management Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Statement Audit or SF-990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governing Body Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRS Certification of Non-Profit Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labor Union Concurrence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letters of Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding Organizations/Sources Names</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logic Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Match Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiated indirect cost agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organizational Chart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recipient contact Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor/Proj. Director Position Desc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor&apos;s Resume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Plan</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Organization__c</referenceTo>
        <relationshipName>NOFAs_RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organizational_Capability_CP__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Organizational Capability </label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organizational_Capability__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Organizational Capability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organizations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>NOFAs_RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_NCCC_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Other- NCCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_for_Focus_Areas_and_Objectives__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_other_section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_NOFA1__c</fullName>
        <formula>Parent_NOFA__r.Name</formula>
        <label>Parent NOFO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_NOFA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent NOFO</label>
        <referenceTo>NOFA__c</referenceTo>
        <relationshipName>NOFAs_RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Past_Application_Due_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this checkbox once the Application Due Date is past.</description>
        <label>Past Application Due Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Peer_Review_End_Date__c</fullName>
        <label>Review End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Peer_Review_Start_Date__c</fullName>
        <label>Review Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Performance_Measures__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance Measures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_EO__c</fullName>
        <formula>Executive_officer__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_POC__c</fullName>
        <formula>Point_of_contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_of_contact1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Point of AR contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NOFAs_RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Point_of_contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Point of contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Organization__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>NOFA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Phone1__c</fullName>
        <formula>Point_of_contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Phone2__c</fullName>
        <formula>Point_of_contact1__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prime_Applicant_State_Commission_Name__c</fullName>
        <formula>$User.Organization_Names__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prime Applicant (State Commission) Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Description__c</fullName>
        <label>Program Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Design_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Project Design</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Design__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Design</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Management_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Project Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <inlineHelpText>Program Name on NOFO/RFP Detail Page -4968</inlineHelpText>
        <label>Program Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If your project is not found then add a new project under your Account.</inlineHelpText>
        <label>Project Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project__c.Project__r.Status__c</field>
                <operation>notEqual</operation>
                <value>Closed</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>NOFOs/RFPs</relationshipLabel>
        <relationshipName>NOFAs_RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Dates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposed Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFP_End_Date__c</fullName>
        <label>RFP End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Name__c</fullName>
        <label>RFP Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RFP_Start_Date__c</fullName>
        <label>RFP Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Status__c</fullName>
        <label>RFP Status</label>
        <picklist>
            <picklistValues>
                <fullName>In-Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open to Applicants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finalized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RSVP_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RSVP Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_for_Ranking__c</fullName>
        <label>Ready for Ranking</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recruitment_and_Development_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Recruitment and Development</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recruitment_and_Development__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recruitment and Development</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_Active_Grant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Active Grant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <label>Required</label>
        <picklist>
            <picklistValues>
                <fullName>1199 Direct Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Articles of Incorporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auditor’s Statement Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board of Directors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Advisory Group Names &amp; Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Financial Report User Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Management Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Statement Audit or SF-990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governing Body Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRS Certification of Non-Profit Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labor Union Concurrence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letters of Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding Organizations/Sources Names</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logic Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Match Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiated indirect cost agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organizational Chart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recipient contact Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor/Proj. Director Position Desc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor&apos;s Resume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Plan</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Review_Cycle__c</fullName>
        <label>Review Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>Rolling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Deadline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Review_Type__c</fullName>
        <label>Review Type</label>
        <picklist>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External or Blended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SCP_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SCP Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SIF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S_N__c</fullName>
        <defaultValue>false</defaultValue>
        <label>S&amp;N</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safety_and_Security_AP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Application setup on NOFA.</description>
        <label>Safety and Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safety_and_Security_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Concept Paper setup on NOFA.</description>
        <label>Safety and Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box on NOFA for Location Information section on NOFA &amp; Application. KY</description>
        <label>School Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Date_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box on NOFA for Location Information section on NOFA &amp; Application. KY</description>
        <label>Site Date Information</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>